# academiadepolitie_com-mcp

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  README_GITHUB.md  README_py39.md  build_installer.py  installer_standalone.py  pyproject.toml  requirements_py39.txt  server.py  server_py39.py  test_py39.py  test_server.py
.github/workflows/: build.yml
