[project]
name = "academiadepolitie-mcp-server"
version = "1.0.0"
description = "MCP Server pentru AcademiaDePolițe.com - conform documentației oficiale"
authors = [
    {name = "AcademiaDePolițe", email = "api@academiadepolitie.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]